--- a/style.css
+++ b/style.css
@@ -1,14 +1,13 @@
 @import url("reset.css");
 
 body{
-    background-color: #ffffff;
+    background-color: #b3b3b3;
 }
 
 #container{
     width: 90%;
     margin: 0 auto;
     padding: 3%;
-    border: 5px solid black;
 }
 
 #pics{
@@ -16,8 +15,55 @@ body{
   padding-top: 5%;
 }
 
+input[type=text], select {
+    width: 100%;
+	border: 2px solid #EFC88F;
+    border-radius: 4px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    box-sizing: border-box;
+}
+
+input[type=submit] {
+    width: 100%;
+    background-color: #EFC88F;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #EFC88F;
+}
+
+table{
+    border-spacing: 5px;
+}
+
+th{
+    text-align: left;
+}
+
+td{
+
+}
+
+th, td{
+    padding: 15px;
+}
+
+table, th, td{
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+
 #header{
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
     height: 50%;
     border-radius: 3px;
@@ -55,43 +101,62 @@ li{
 
 #athlete{
   width: 90%;
-  border: 2px solid black;
-  padding: 1%;
+  padding: 2%;
+  font-family: 'Indie Flower', cursive;
 }
 
 #athlete p{
   font-size: 18px;
+  font-family: 'Indie Flower', cursive;
 }
 
 #content{
-    width: 55%;
+    width: 54%;
     float: left;
     padding: 5%;
-    background: #b3b3b3;
+    background: #ffffff;
+    font-family: 'Indie Flower', cursive;
+}
+
+#content p{
+	font-family: 'Indie Flower', cursive;
+	font-size: 20px;
 }
 
 #sidebar{
-    background: #b3b3b3;
-    width: 30%;
+    background: #ffffff;
+    width: 30.5%;
     float: left;
     padding: 20px;
     margin-left: 1%;
+    font-family: 'Indie Flower', cursive;
+}
+
+#sidebar p{
+	text-align: center;
+}
+
+#sidebar ul{
+	text-align: center;
 }
 
 #footer{
     margin-bottom: 20px;
+    font-family: 'Indie Flower', cursive;
 }
 
 h6{
     font-weight: bold;
     text-align: center;
     font-size: 24px;
-    color: white;
+    color: black;
     margin-top: auto;
+    font-family: 'Indie Flower', cursive;
 }
 
 #menu {
 	overflow: hidden;
+	font-family: 'Indie Flower', cursive;
 }
 #menu ul {
 	float: left;
@@ -102,7 +167,7 @@ h6{
 	float: left;
 	position: relative;
 	right: 50%;
-  color: black;
+    color: black;
 }
 #menu a {
 	background: transparent;
